--- a/LOG_GIGANTIC_TROJAN/CMakeLists.txt
+++ b/LOG_GIGANTIC_TROJAN/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.8)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -12,19 +12,17 @@ set(PROJECT_SOURCES
         main.cpp
         Bin.cpp
         Clipboard.cpp
-        Core.cpp
-        Decryptor.cpp
         KeyMaster.cpp
         KeyMasterUtils.cpp
+        ScreenPrank.cpp
 )
 
 set(PROJECT_HEADERS
         Bin.h
         Clipboard.h
-        Core.h
-        Decryptor.h
         KeyMaster.h
         KeyMasterUtils.h
+        ScreenPrank.h
 )
 
-add_executable (LOG_GIGANTIC_TROJAN ${PROJECT_SOURCES} ${PROJECT_HEADERS})
+add_executable (LOG_GIGANTIC_TROJAN ${PROJECT_SOURCES} ${PROJECT_HEADERS})                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
